# telegram-bot-template

./: .gitignore  config.example.toml  pyproject.toml
src/: config.py  main.py
src/bootstrap/: bot_factory.py
src/bootstrap/config/: settings.py
src/handlers/: __init__.py
