[tool.poetry]
name = "telegram-bot-template"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot_template"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
